# espn_fantasy_my_matchup

./: .flake8  .gitignore  .isort.cfg  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
app/: routes.py
app/templates/: index.html
ecs_fargate/: main.tf  variables.tf
espn_fantasy_my_matchup/: flow.py  handler.py  helper_io.py
fantasy_application/: Dockerfile  config.py
fantasy_application/app/: __init__.py  routes.py
fantasy_application/app/forms/: __init__.py  constants.py  forms.py
fantasy_application/app/templates/: base.html  index.html  info.html
src/: handler.py
terraform/: .terraform.lock.hcl  fantasy.tfvars  fargate.tf  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/iam/: lambda_assume_policy.json  lambda_function_policy.json
utils/: test_handler.py
