[tool.poetry]
name = "espn_fantasy_my_matchup"
version = "0.1.0"
description = ""
authors = ["RobBlumberg <robertblumberg97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
espn_fantasy_matchup_stats = {git = "git@github.com:RobBlumberg/espn_fantasy_matchup_stats.git", rev = "3331918404fe009d30b78784a07c40c7bab33e68"}
boto3 = "^1.18.36"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
ipykernel = "^6.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
